# Deterministic-Policy-Gates-for-Stochastic-Systems

./: .gitignore  README.md  pyproject.toml  requirements.txt  results.md
artifacts/: README.md
configs/: experiment.yaml  policies.yaml
docs/: DETERMINISTIC_POLICY_GATES.md  SYSTEM_HANDOFF_DOCUMENT.md
notebooks/: policy_bounded_ai.ipynb
paper/: policy_bounded_ai.md  refs.md
scripts/: aggregate_adversarial_runs.py  analyze_hard_gamma.py  analyze_run.py  download_feverous.py  ferverous.ps1  gate_suite.py  plot_energy_vs_rank.py  plot_regions.py  policy_ablation.py  prepare_casehold_claims.py  prepare_hotpotqa_neg.py  prepare_kiddo.py  prepare_maud.py  prepare_scifact_gate.py  reproduce.ps1  reproduce.sh  run.ps1  run_claims.ps1  run_gate_suite.ps1  run_gate_suite.py  run_gate_suite_hotpot.ps1  run_gate_suite_kiddo.ps1  run_gate_suite_maud.ps1  run_gate_suite_maud_neg.ps1  run_gate_suite_scifact.ps1  run_summarization.ps1  scifact.ps1  summarize_results.py  tree.py  tunable_policy.ps1  validate_halueval.py  zip_project.py
scripts/datasets/: convert_casehold.py  convert_scifact_raw.py  download_feverous.py  download_hover.py  download_scifact.py  ferverous_cache.py  ferverous_cache_bge.ps1  ferverous_cache_build.py  feverous_wiki_resolver.py  prepare_halueval.py  prepare_hotpotqa_neg.py  prepare_hover_gate.py  prepare_kiddo.py  prepare_maud.py  prepare_pubmed.py  prepare_scifact_gate.py  prepare_scifact_gate_release.py
src/certum/: adversarial.py  calibration.py  custom_types.py  gate.py  plot.py
src/dpgss/: __init__.py  adversarial.py  audit.py  calibration.py  (+6 more)
(+69 files in other folders)
