[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "certum"
version = "0.1.0"
description = "Deterministic Policy Gates for Stochastic Systems"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "Ernan Hughes" }
]

dependencies = [
    "numpy>=1.24,<2",
    "scipy>=1.10",
    "pandas",
    "matplotlib",
    "seaborn",
    "torch==2.1.2",
    "transformers==4.36.2",
    "sentence-transformers==2.2.2",
    "huggingface_hub==0.14.1",
    "tqdm",
    "datasets",
    "scikit-learn",
    "duckdb",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
